# fittrack-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_ws.py
apps/body/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/body/migrations/: 0001_initial.py
apps/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/diet/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/diet/migrations/: 0001_initial.py
apps/notifications/: admin.py  device_urls.py  models.py  notification_urls.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/professional/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/professional/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  me_urls.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_profile.py
apps/workouts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/workouts/migrations/: 0001_initial.py
config/: asgi.py  celery.py  serializers.py  urls.py
config/settings/: base.py  dev.py
